2008-05-23  Paul J Stevens <paul@nfg.nl>

	* src/clientsession.c, src/dbmail-imapsession.c, 
	src/dbmail-imapsession.h, src/dbmailtypes.h, src/dm_db.c, 
	src/dm_debug.c, src/imap4.c, src/imapcommands.c, src/server.c, 
	test-scripts/testimap.py, test-scripts/testsearch.imap:
	basic thunderbird tests ok now

2008-05-20  Paul J Stevens <paul@nfg.nl>

	* src/dbmail-imapsession.c, src/dbmail-imapsession.h, src/imap4.c:
	minor cleanups

2008-05-19  Paul J Stevens <paul@nfg.nl>

	* src/dbmail-imapsession.c, src/dbmail-imapsession.h, 
	src/dbmailtypes.h, src/dm_db.c, src/dm_db.h, src/imap4.c, 
	src/imapcommands.c, src/server.c, test-scripts/testappend.txt:
	more cleanups
	* ChangeLog, src/dbmail-imapsession.h, src/imap4.c, 
	src/imapcommands.c:
	finish making imap commands threaded
	* src/dbmail-imapsession.h, src/imap4.c, src/imapcommands.c:
	return value and exit status cleanups
	* src/dbmail-imapsession.c, src/dbmail-imapsession.h, src/imap4.c, 
	src/imapcommands.c, src/server.c:
	thread framework now stable, make more commands threaded

2008-05-19  Paul J Stevens <paul@nfg.nl>

	* src/dbmail-imapsession.h, src/imap4.c, src/imapcommands.c:
	finish making imap commands threaded

2008-05-18  Paul J Stevens <paul@nfg.nl>

	* src/dbmail-imapsession.h, src/imap4.c, src/imapcommands.c:
	return value and exit status cleanups
	* src/dbmail-imapsession.c, src/dbmail-imapsession.h, src/imap4.c, 
	src/imapcommands.c, src/server.c:
	thread framework now stable, make more commands threaded

2008-05-17  Paul Stevens <paul@nfg.nl>

	* src/dbmail-imapsession.c, src/dbmail-imapsession.h, src/imap4.c, 
	src/imapcommands.c, src/server.c, test-scripts/testlist.txt, 
	test/check_dbmail_deliver.c, test/check_dbmail_imapd.c:
	wip imap threads
	* src/server.c:
	blah
	* src/auth.h, src/authmodule.c, src/authmodule.h, 
	src/clientsession.c, src/dbmail-imapsession.c, 
	src/dbmail-imapsession.h, src/dbmailtypes.h, src/dm_db.c, 
	src/dm_db.h, src/dm_misc.c, src/dm_misc.h, src/imap4.c, src/lmtp.c, 